[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htmlkit"
version = "0.1.0"
description = "Typsichere, composable UI-Komponenten für Python — server-side rendered, HTMX-first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["html", "components", "htmx", "server-side-rendering", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "markupsafe>=2.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# ---------------------------------------------------------------------------
# Ruff — Linting & Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "ANN101", # missing-type-self (deprecated)
    "ANN102", # missing-type-cls (deprecated)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "markupsafe"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
