[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htmforge"
version = "0.2.1"
description = "Type-safe, composable UI components for Python — server-side rendered, HTMX-first."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "mondi04", email = "206898989+mondi04@users.noreply.github.com" },
]
keywords = [
    "html", "components", "htmx", "pydantic",
    "server-side-rendering", "type-safe",
    "jinja2-alternative", "web", "fastapi", "flask", "django"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Framework :: FastAPI",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "pydantic>=2.0",
    "markupsafe>=2.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.urls]
Homepage = "https://github.com/mondi04/htmforge"
Repository = "https://github.com/mondi04/htmforge"
"Bug Tracker" = "https://github.com/mondi04/htmforge/issues"
Documentation = "https://mondi04.github.io/htmforge/"
Changelog = "https://github.com/mondi04/htmforge/blob/main/docs/changelog.md"

# ---------------------------------------------------------------------------
# Ruff — Linting & Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "markupsafe"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# hatch — build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["htmforge"]
